<resources>
    <string name="app_name">SpendWise</string>
    <string name="addExpenseText">Añadir Gasto</string>
    <string name="importar_datos">Importar datos</string>
    <string name="a_adir_gasto">Añadir Gasto</string>
    <string name="exportar_gastos">Exportar Gasto</string>
    <string name="ver_estadisticas">Ver Estadisticas</string>
    <string name="reiniciar_presupuesto">Reiniciar Presupuesto</string>
    <string name="eliminar_gasto">Eliminar Gasto</string>
    <string name="historybutton">Historial de Gastos</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="view_gasto">Gasto:</string>
    <string name="view_fecha">Fecha:</string>
    <string name="mensaje_reseteo">* El presupuesto debe ser mayor que 0 o vacío si no se quiere tener en cuenta</string>
    <string name="view_dinero_gastado">Dinero Gastado:</string>
    <string name="view_tipo_de_pago">Tipo de Pago:</string>
    <string name="view_categoria">Categoría:</string>
    <string name="view_nota">Nota:</string>
    <string name="guardar">Guardar</string>
    <string name="eliminar">Eliminar</string>
    <string name="nombre">Nombre</string>
    <string name="presupuesto">Presupuesto: </string>
    <string name="inciar">Iniciar</string>
    <string name="seleccionar_todos">Seleccionar todos</string>
    <string name="q_gasto">Por favor, introduce el nombre del Gasto.</string>
    <string name="q_ms">Por favor, introduce un cantidad válida para el gasto.(Mayor o igual a 0) </string>
    <string name="q_fecha">Por favor, introduce un fecha valida</string>
    <string name="advertencia">Advertencia</string>
    <string name="q_name">El nombre no puede ser un campo no vacio</string>
    <string name="q_json">Archivo Json exportado con éxito</string>
    <string name="q_excel">"Archivo excel exportado con éxito"</string>
    <string name="q_json_i">Archivo Json importado con éxito</string>
    <string name="q_error_excel">Error al guardar el archivo Excel</string>
    <string name="q_app_excel">No hay aplicaciones instaladas para abrir archivos Excel</string>
    <string name="q_error_json">Error al guardar el archivo Json</string>
    <string name="q_json_save">Archivo JSON guardado con éxito</string>
    <string name="no_expenses">No hay gastos en la aplicacion</string>
    <string name="joke">Gasta pero gasta sonriendo :)</string>

    <string-array name="chart_types">
        <item>Por categorías</item>
        <item>Por tipo de pago</item>
        <item>Dinero Gastado por Mes</item>
        <item>Informacion General</item>
        <!-- Puedes agregar más opciones según tus necesidades -->
    </string-array>
    <string-array name="year_types">
        <item>Por categorías</item>
        <item>Por tipo de pago</item>
        <item>Dinero Gastado por Mes</item>
        <item>Informacion General</item>
        <!-- Puedes agregar más opciones según tus necesidades -->
    </string-array>
</resources>