<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/expenseText"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:ems="10"
                    android:hint="@string/view_gasto"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHint="?attr/colorPrimary"
                    android:inputType="text"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/moneySpent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/view_dinero_gastado"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHint="?attr/colorPrimary"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp" />

                <EditText
                    android:id="@+id/expenseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/view_fecha"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHint="?attr/colorPrimary"
                    android:inputType="date"
                    android:minHeight="48dp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_categoria"
                    android:textColor="?attr/colorPrimary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/expenseCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/view_tipo_de_pago"
                    android:textColor="?attr/colorPrimary"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/expenseMethod"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:spinnerMode="dropdown" />

                <EditText
                    android:id="@+id/noteText"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/view_nota"
                    android:textColor="?attr/colorPrimary"
                    android:textColorHint="?attr/colorPrimary"
                    android:inputType="textMultiLine" />

                <ImageView
                    android:id="@+id/galleryImageView"
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    app:srcCompat="@android:drawable/ic_menu_gallery" />

            </LinearLayout>

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/guardar" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>